--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@tensorflow-models/posenet": "^2.2.1",
+    "@tensorflow/tfjs": "^1.7.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "dat.gui": "^0.7.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "stats-js": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
