--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
     "dat.gui": "^0.7.7",
+    "edit-json-file": "^1.4.0",
+    "fs": "0.0.1-security",
+    "json-server": "^0.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-json-edit": "^0.3.1",
     "react-scripts": "3.4.1",
     "stats-js": "^1.0.1"
   },
@@ -18,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev-server": "json-server --watch db.json --port 3001"
   },
   "eslintConfig": {
     "extends": "react-app"
